2009-06-16 - Sean Huber (shuber@huberry.com)
  * Refactor Path#update_child_path_column_values
  * Refactor Path#self_and_descendants
  * Fix descendants sorting for Path
  * Refactor Path
  * Update documentation
  * Require ActiveRecord greater than or equal to 2.1
  * Add functionality to optionally to store a node's :level_column to Tree theory
  * Typo
  * Add example tables to documentation
  * Force :dependent => :destroy on Tree's children association
  * Add Tree#flatten!
  * Refactor Path order option merging

2009-06-15 - Sean Huber (shuber@huberry.com)
  * Tree accepts an array of order options
  * Add Tree#parent_column_value
  * Refactor Tree#nestable_scope
  * Tree uses anonymous scopes whenever possible
  * Optimize Tree validations
  * Remove Set for now
  * Update Path logic and tests
  * Add roots named scope to Tree
  * Always add :class to nestable_options

2009-06-14 - Sean Huber (shuber@huberry.com)
  * Update Nestable interface logic
  * Update README
  * Add tree tests
  * Add basic set theory (uses all of the tree theory logic)
  * Add methods that need to be overwritten to set
  * Tree ensures parent exists in the nestable scope
  * Refactor Tree included logic
  * Refactor interface logic
  * Add #{association}_ids methods
  * Update documentation
  * Update set tests
  * Tree#nestable_scope uses an anonymous scope instead of an array of conditions
  * Only set :conditions on nestable_scope if there are any :scopes

2009-06-13 - Sean Huber (shuber@huberry.com)
  * Initial commit
  * Add Nestable::Tree logic
  * Rename :foreign_key option to :parent_column
  * Update test_helper
  * Add nestable tests
  * Rename validate_nestable_options to process_options!
  * Add Nestable::Interface
  * Use NotImplementedError instead of defining our own
  * Update README