@@ -11,6 +11,7 @@
   * Force :dependent => :destroy on Tree's children association
   * Add Tree#flatten!
   * Refactor Path order option merging
+  * Add leaves named scope to Tree
 
 2009-06-15 - Sean Huber (shuber@huberry.com)
   * Tree accepts an array of order options
